@@ -9,17 +9,17 @@ import java.util.*;
 import java.util.regex.Pattern;
 
 public final class InstructionPatternCompiler {
-    private static final Set<String> FRAME_TYPES = Set.of("F_NEW", "F_FULL", "F_APPEND", "F_CHOP", "F_SAME", "F_SAME1");
+    private static final Set<String> FRAME_TYPES = new HashSet<String>(Arrays.asList(
+            "F_NEW", "F_FULL", "F_APPEND", "F_CHOP", "F_SAME", "F_SAME1"));
 
-    private InstructionPatternCompiler() {
-    }
+    private InstructionPatternCompiler() {}
 
     public static Compilation compile(String source, boolean includeMetadata) {
         String input = source == null ? "" : source;
-        List<InstructionPattern.Element> elements = new ArrayList<>();
-        List<PatternDiagnostic> diagnostics = new ArrayList<>();
+        List<InstructionPattern.Element> elements = new ArrayList<InstructionPattern.Element>();
+        List<PatternDiagnostic> diagnostics = new ArrayList<PatternDiagnostic>();
         boolean ignoredMetadata = false;
-        String[] lines = input.split("\\R", -1);
+        String[] lines = input.split("\\r?\\n|\\r", -1);
 
         for (int lineIndex = 0; lineIndex < lines.length; lineIndex++) {
             String trimmed = lines[lineIndex].trim();
@@ -46,24 +46,21 @@ public final class InstructionPatternCompiler {
             if (tokens.isEmpty()) continue;
 
             String opcode = tokens.get(0).toLowerCase(Locale.ROOT);
-            Class<?> instructionClass = OpcodeClasses.getOpcodeClass(opcode);
+            Class instructionClass = OpcodeClasses.getOpcodeClass(opcode);
             if (instructionClass == null) {
                 diagnostics.add(error(sourceLine, 1, "Unknown opcode '" + tokens.get(0) + "'"));
                 continue;
             }
             boolean metadata = isMetadata(instructionClass);
-            if (metadata && !includeMetadata) {
-                ignoredMetadata = true;
-                continue;
-            }
+            if (metadata && !includeMetadata) { ignoredMetadata = true; continue; }
 
             try {
                 List<OperandKind> kinds = operandKinds(opcode, instructionClass, tokens);
-                List<OperandMatcher> operands = new ArrayList<>(kinds.size());
+                List<OperandMatcher> operands = new ArrayList<OperandMatcher>(kinds.size());
                 for (int i = 0; i < kinds.size(); i++) {
                     operands.add(compileOperand(tokens.get(i + 1), kinds.get(i)));
                 }
-                elements.add(new InstructionPattern.InstructionLine(sourceLine, opcode, List.copyOf(operands)));
+                elements.add(new InstructionPattern.InstructionLine(sourceLine, opcode, Collections.unmodifiableList(operands)));
             } catch (IllegalArgumentException e) {
                 diagnostics.add(error(sourceLine, operandColumn(trimmed, tokens), e.getMessage()));
             }
@@ -75,32 +72,23 @@ public final class InstructionPatternCompiler {
         }
         if (elements.isEmpty()) {
             diagnostics.add(error(1, 1, "Enter at least one instruction or wildcard"));
-        } else if (elements.stream().allMatch(e -> e instanceof InstructionPattern.Gap)) {
-            diagnostics.add(error(1, 1, "A pattern cannot contain only sequence gaps"));
+        } else {
+            boolean allGaps = true;
+            for (InstructionPattern.Element e : elements) {
+                if (!(e instanceof InstructionPattern.Gap)) { allGaps = false; break; }
+            }
+            if (allGaps) diagnostics.add(error(1, 1, "A pattern cannot contain only sequence gaps"));
         }
 
-        boolean valid = diagnostics.stream().noneMatch(d -> d.severity() == PatternDiagnostic.Severity.ERROR);
-        InstructionPattern pattern = valid ? new InstructionPattern(input, includeMetadata, elements) : null;
-        return new Compilation(pattern, List.copyOf(diagnostics));
+        boolean valid = true;
+        for (PatternDiagnostic d : diagnostics) {
+            if (d.severity() == PatternDiagnostic.Severity.ERROR) { valid = false; break; }
+        }
+        InstructionPattern pattern = valid ? new InstructionPattern(input, includeMetadata, Collections.unmodifiableList(elements)) : null;
+        return new Compilation(pattern, Collections.unmodifiableList(diagnostics));
     }
 
-    public static String completionTemplate(String opcode) {
-        Class<?> type = OpcodeClasses.getOpcodeClass(opcode);
-        if (type == null || type == InsnNode.class) return opcode;
-        if (type == IntInsnNode.class || type == VarInsnNode.class || type == TypeInsnNode.class
-                || type == JumpInsnNode.class || type == LdcInsnNode.class) return opcode + " *";
-        if (type == FieldInsnNode.class) return opcode + " * * *";
-        if (type == MethodInsnNode.class || type == InvokeDynamicInsnNode.class) return opcode + " * * * *";
-        if (type == IincInsnNode.class || type == MultiANewArrayInsnNode.class) return opcode + " * *";
-        if (type == TableSwitchInsnNode.class) return opcode + " * * * *";
-        if (type == LookupSwitchInsnNode.class) return opcode + " * * *";
-        if (type == LabelNode.class) return "label *";
-        if (type == LineNumberNode.class) return "line * *";
-        if (type == FrameNode.class) return "frame * * *";
-        return opcode;
-    }
-
-    private static List<OperandKind> operandKinds(String opcode, Class<?> type, List<String> tokens) {
+    private static List<OperandKind> operandKinds(String opcode, Class type, List<String> tokens) {
         int count = tokens.size() - 1;
         if (type == InsnNode.class) return fixed(opcode, count);
         if (type == IntInsnNode.class || type == VarInsnNode.class) return fixed(opcode, count, OperandKind.INTEGER);
@@ -116,21 +104,15 @@ public final class InstructionPatternCompiler {
         if (type == FrameNode.class) return fixed(opcode, count, OperandKind.FRAME_TYPE, OperandKind.FRAME_VALUES, OperandKind.FRAME_VALUES);
         if (type == TableSwitchInsnNode.class) {
             if (count < 4) throw new IllegalArgumentException("Expected min, max, default, and labels");
-            if (!tokens.get(1).equals("*") && !tokens.get(2).equals("*")) {
-                int min = decodeInteger(tokens.get(1));
-                int max = decodeInteger(tokens.get(2));
-                if (max < min) throw new IllegalArgumentException("Table switch max is below min");
-                if (count != 3 + max - min + 1) throw new IllegalArgumentException("Table switch range requires " + (max - min + 1) + " labels");
-            }
-            List<OperandKind> kinds = new ArrayList<>(count);
-            kinds.add(OperandKind.INTEGER);
-            kinds.add(OperandKind.INTEGER);
+            List<OperandKind> kinds = new ArrayList<OperandKind>(count);
+            kinds.add(OperandKind.INTEGER); kinds.add(OperandKind.INTEGER);
             for (int i = 2; i < count; i++) kinds.add(OperandKind.LABEL);
             return kinds;
         }
         if (type == LookupSwitchInsnNode.class) {
-            if (count < 1 || (count - 1) % 2 != 0) throw new IllegalArgumentException("Expected default followed by key/label pairs");
-            List<OperandKind> kinds = new ArrayList<>(count);
+            if (count < 1 || (count - 1) % 2 != 0)
+                throw new IllegalArgumentException("Expected default followed by key/label pairs");
+            List<OperandKind> kinds = new ArrayList<OperandKind>(count);
             kinds.add(OperandKind.LABEL);
             for (int i = 1; i < count; i += 2) { kinds.add(OperandKind.INTEGER); kinds.add(OperandKind.LABEL); }
             return kinds;
@@ -143,33 +125,31 @@ public final class InstructionPatternCompiler {
             throw new IllegalArgumentException("Expected " + kinds.length + " operand"
                     + (kinds.length == 1 ? "" : "s") + " for " + opcode + ", found " + actual);
         }
-        return List.of(kinds);
+        return Arrays.asList(kinds);
     }
 
     private static OperandMatcher compileOperand(String token, OperandKind kind) {
         if (token.equals("*")) return AnyOperand.INSTANCE;
-        return switch (kind) {
-            case INTEGER -> new ExactOperand(kind, decodeInteger(token));
-            case BOOLEAN -> new ExactOperand(kind, decodeBoolean(token));
-            case STRING -> StringOperand.compile(token);
-            case LABEL -> new LabelOperand(decodePatternString(token).literal());
-            case VALUE -> new ExactOperand(kind, AssemblerValueCodec.parse(token));
-            case VALUE_LIST -> new ExactOperand(kind, AssemblerValueCodec.parseList(token));
-            case FRAME_TYPE -> {
-                String t = token.toUpperCase(Locale.ROOT);
-                if (!FRAME_TYPES.contains(t)) throw new IllegalArgumentException("Unknown frame type '" + token + "'");
-                yield new ExactOperand(kind, t);
-            }
-            case FRAME_VALUES -> {
-                if (!token.equalsIgnoreCase("null") && !(token.startsWith("[") && token.endsWith("]"))) {
-                    throw new IllegalArgumentException("Expected null or a bracketed frame-value list");
-                }
-                yield new ExactOperand(kind, token);
-            }
-        };
+        if (kind == OperandKind.INTEGER) return new ExactOperand(kind, decodeInteger(token));
+        if (kind == OperandKind.BOOLEAN) return new ExactOperand(kind, decodeBoolean(token));
+        if (kind == OperandKind.STRING) return StringOperand.compile(token);
+        if (kind == OperandKind.LABEL) return new LabelOperand(decodePatternString(token).literal);
+        if (kind == OperandKind.VALUE) return new ExactOperand(kind, AssemblerValueCodec.parse(token));
+        if (kind == OperandKind.VALUE_LIST) return new ExactOperand(kind, AssemblerValueCodec.parseList(token));
+        if (kind == OperandKind.FRAME_TYPE) {
+            String t = token.toUpperCase(Locale.ROOT);
+            if (!FRAME_TYPES.contains(t)) throw new IllegalArgumentException("Unknown frame type '" + token + "'");
+            return new ExactOperand(kind, t);
+        }
+        if (kind == OperandKind.FRAME_VALUES) {
+            if (!token.equalsIgnoreCase("null") && !(token.startsWith("[") && token.endsWith("]")))
+                throw new IllegalArgumentException("Expected null or a bracketed frame-value list");
+            return new ExactOperand(kind, token);
+        }
+        throw new IllegalArgumentException("Unhandled operand kind: " + kind);
     }
 
-    private static boolean isMetadata(Class<?> type) {
+    private static boolean isMetadata(Class type) {
         return type == LabelNode.class || type == FrameNode.class || type == LineNumberNode.class;
     }
 
@@ -183,7 +163,7 @@ public final class InstructionPatternCompiler {
                 message == null ? "Invalid instruction" : message);
     }
 
-    private static int decodeInteger(String token) {
+    static int decodeInteger(String token) {
         try { return Integer.decode(token); }
         catch (NumberFormatException e) { throw new IllegalArgumentException("Invalid integer '" + token + "'"); }
     }
@@ -195,9 +175,8 @@ public final class InstructionPatternCompiler {
     }
 
     private static PatternString decodePatternString(String token) {
-        if (token.length() < 2 || token.charAt(0) != '"' || token.charAt(token.length() - 1) != '"') {
+        if (token.length() < 2 || token.charAt(0) != '"' || token.charAt(token.length() - 1) != '"')
             throw new IllegalArgumentException("Expected a quoted string");
-        }
         StringBuilder literal = new StringBuilder();
         StringBuilder regex = new StringBuilder("^");
         boolean wildcard = false;
@@ -207,53 +186,49 @@ public final class InstructionPatternCompiler {
                 if (++i >= token.length() - 1) throw new IllegalArgumentException("Incomplete escape sequence");
                 char esc = token.charAt(i);
                 if (esc == '*' || esc == '?') {
-                    literal.append(esc);
-                    regex.append(Pattern.quote(String.valueOf(esc)));
-                    continue;
+                    literal.append(esc); regex.append(Pattern.quote(String.valueOf(esc))); continue;
                 }
-                char decoded = switch (esc) {
-                    case '\\', '"' -> esc;
-                    case 'n' -> '\n';
-                    case 'r' -> '\r';
-                    case 't' -> '\t';
-                    case 'b' -> '\b';
-                    case 'f' -> '\f';
-                    case 'u' -> {
-                        if (i + 4 >= token.length()) throw new IllegalArgumentException("Incomplete unicode escape");
-                        String digits = token.substring(i + 1, i + 5);
-                        try { yield (char) Integer.parseInt(digits, 16); }
-                        catch (NumberFormatException e) { throw new IllegalArgumentException("Invalid unicode escape"); }
-                        finally { i += 4; }
-                    }
-                    default -> throw new IllegalArgumentException("Unknown escape \\'" + esc + "'");
-                };
-                literal.append(decoded);
-                regex.append(Pattern.quote(String.valueOf(decoded)));
-            } else if (c == '*') {
-                wildcard = true;
-                regex.append(".*");
-            } else if (c == '?') {
-                wildcard = true;
-                regex.append('.');
-            } else {
-                literal.append(c);
-                regex.append(Pattern.quote(String.valueOf(c)));
-            }
+                char decoded;
+                if (esc == '\\' || esc == '"') decoded = esc;
+                else if (esc == 'n') decoded = '\n';
+                else if (esc == 'r') decoded = '\r';
+                else if (esc == 't') decoded = '\t';
+                else if (esc == 'b') decoded = '\b';
+                else if (esc == 'f') decoded = '\f';
+                else if (esc == 'u') {
+                    if (i + 4 >= token.length()) throw new IllegalArgumentException("Incomplete unicode escape");
+                    String digits = token.substring(i + 1, i + 5);
+                    try { decoded = (char) Integer.parseInt(digits, 16); }
+                    catch (NumberFormatException e) { throw new IllegalArgumentException("Invalid unicode escape"); }
+                    i += 4;
+                } else throw new IllegalArgumentException("Unknown escape \\'" + esc + "'");
+                literal.append(decoded); regex.append(Pattern.quote(String.valueOf(decoded)));
+            } else if (c == '*') { wildcard = true; regex.append(".*");
+            } else if (c == '?') { wildcard = true; regex.append('.');
+            } else { literal.append(c); regex.append(Pattern.quote(String.valueOf(c))); }
         }
         regex.append('$');
         return new PatternString(literal.toString(), wildcard ? Pattern.compile(regex.toString(), Pattern.DOTALL) : null);
     }
 
-    public record Compilation(InstructionPattern pattern, List<PatternDiagnostic> diagnostics) {
-        public boolean valid() {
-            return pattern != null;
+    public static final class Compilation {
+        private final InstructionPattern pattern;
+        private final List<PatternDiagnostic> diagnostics;
+
+        Compilation(InstructionPattern pattern, List<PatternDiagnostic> diagnostics) {
+            this.pattern = pattern;
+            this.diagnostics = diagnostics;
         }
 
+        public boolean valid() { return pattern != null; }
+        public InstructionPattern pattern() { return pattern; }
+        public List<PatternDiagnostic> diagnostics() { return diagnostics; }
+
         public PatternDiagnostic primaryDiagnostic() {
-            return diagnostics.stream()
-                    .filter(d -> d.severity() == PatternDiagnostic.Severity.ERROR)
-                    .findFirst()
-                    .orElse(diagnostics.isEmpty() ? null : diagnostics.get(0));
+            for (PatternDiagnostic d : diagnostics) {
+                if (d.severity() == PatternDiagnostic.Severity.ERROR) return d;
+            }
+            return diagnostics.isEmpty() ? null : diagnostics.get(0);
         }
     }
 
@@ -267,31 +242,35 @@ public final class InstructionPatternCompiler {
 
     public enum AnyOperand implements OperandMatcher {
         INSTANCE;
-
-        @Override
-        public boolean matches(String candidate, Map<String, String> labels) {
-            return true;
-        }
+        public boolean matches(String candidate, Map<String, String> labels) { return true; }
     }
 
-    public record LabelOperand(String name) implements OperandMatcher {
-        @Override
+    public static final class LabelOperand implements OperandMatcher {
+        private final String name;
+        public LabelOperand(String name) { this.name = name; }
+        public String name() { return name; }
+
         public boolean matches(String candidate, Map<String, String> labels) {
             String candidateName;
             try { candidateName = AssemblerValueCodec.parseQuotedString(candidate); }
             catch (IllegalArgumentException e) { return false; }
-            String bound = labels.putIfAbsent(name, candidateName);
-            return bound == null || bound.equals(candidateName);
+            String bound = labels.get(name);
+            if (bound == null) { labels.put(name, candidateName); return true; }
+            return bound.equals(candidateName);
         }
     }
 
-    public record StringOperand(String literal, Pattern glob) implements OperandMatcher {
+    public static final class StringOperand implements OperandMatcher {
+        private final String literal;
+        private final Pattern glob;
+
+        private StringOperand(String literal, Pattern glob) { this.literal = literal; this.glob = glob; }
+
         static StringOperand compile(String token) {
             PatternString v = decodePatternString(token);
-            return new StringOperand(v.literal(), v.glob());
+            return new StringOperand(v.literal, v.glob);
         }
 
-        @Override
         public boolean matches(String candidate, Map<String, String> labels) {
             String value;
             try { value = AssemblerValueCodec.parseQuotedString(candidate); }
@@ -300,29 +279,41 @@ public final class InstructionPatternCompiler {
         }
     }
 
-    public record ExactOperand(OperandKind kind, Object value) implements OperandMatcher {
-        @Override
+    public static final class ExactOperand implements OperandMatcher {
+        private final OperandKind kind;
+        private final Object value;
+
+        public ExactOperand(OperandKind kind, Object value) { this.kind = kind; this.value = value; }
+
         public boolean matches(String candidate, Map<String, String> labels) {
             try {
-                Object other = switch (kind) {
-                    case INTEGER -> decodeInteger(candidate);
-                    case BOOLEAN -> decodeBoolean(candidate);
-                    case VALUE -> AssemblerValueCodec.parse(candidate);
-                    case VALUE_LIST -> AssemblerValueCodec.parseList(candidate);
-                    case FRAME_TYPE -> candidate.toUpperCase(Locale.ROOT);
-                    case FRAME_VALUES -> candidate;
-                    default -> candidate;
-                };
-                if (value instanceof Object[] left && other instanceof Object[] right) {
-                    return Arrays.deepEquals(left, right);
+                Object other;
+                if (kind == OperandKind.INTEGER) other = decodeInteger(candidate);
+                else if (kind == OperandKind.BOOLEAN) other = decodeBoolean(candidate);
+                else if (kind == OperandKind.VALUE) other = AssemblerValueCodec.parse(candidate);
+                else if (kind == OperandKind.VALUE_LIST) other = AssemblerValueCodec.parseList(candidate);
+                else if (kind == OperandKind.FRAME_TYPE) other = candidate.toUpperCase(Locale.ROOT);
+                else other = candidate;
+
+                if (value instanceof Object[] && other instanceof Object[]) {
+                    return Arrays.deepEquals((Object[]) value, (Object[]) other);
                 }
-                return Objects.equals(value, other);
+                return value == null ? other == null : value.equals(other);
             } catch (IllegalArgumentException e) {
                 return false;
             }
         }
+
+        private static boolean decodeBoolean(String token) {
+            if (token.equalsIgnoreCase("true")) return true;
+            if (token.equalsIgnoreCase("false")) return false;
+            throw new IllegalArgumentException("Expected true or false");
+        }
     }
 
-    private record PatternString(String literal, Pattern glob) {
+    private static final class PatternString {
+        final String literal;
+        final Pattern glob;
+        PatternString(String literal, Pattern glob) { this.literal = literal; this.glob = glob; }
     }
 }
