@@ -9,15 +9,26 @@ import java.util.*;
 public final class PatternReplaceSession {
     public enum State { RUNNING, FINISHED }
 
-    public record ReplaceResult(ClassNode classNode, MethodNode method, int replacements) {
+    public static final class ReplaceResult {
+        private final ClassNode classNode;
+        private final MethodNode method;
+        private final int replacements;
+
+        public ReplaceResult(ClassNode classNode, MethodNode method, int replacements) {
+            this.classNode = classNode; this.method = method; this.replacements = replacements;
+        }
+
+        public ClassNode classNode() { return classNode; }
+        public MethodNode method() { return method; }
+        public int replacements() { return replacements; }
     }
 
     private final JarArchive jarArchive;
     private final InstructionPattern searchPattern;
     private final String replacementText;
     private final List<MethodEntry> methods;
-    private final List<ReplaceResult> results = new ArrayList<>();
-    private final List<String> errors = new ArrayList<>();
+    private final List<ReplaceResult> results = new ArrayList<ReplaceResult>();
+    private final List<String> errors = new ArrayList<String>();
     private int methodIndex;
     private int totalReplacements;
     private State state = State.RUNNING;
@@ -26,7 +37,7 @@ public final class PatternReplaceSession {
         this.jarArchive = jarArchive;
         this.searchPattern = searchPattern;
         this.replacementText = replacementText;
-        List<MethodEntry> all = new ArrayList<>();
+        List<MethodEntry> all = new ArrayList<MethodEntry>();
         if (jarArchive != null && jarArchive.getClasses() != null) {
             for (Map.Entry<String, ClassNode> entry : jarArchive.getClasses().entrySet()) {
                 ClassNode cn = entry.getValue();
@@ -48,17 +59,16 @@ public final class PatternReplaceSession {
         do {
             MethodEntry entry = methods.get(methodIndex++);
             try {
-                int replaced = replaceInMethod(entry.classNode(), entry.methodNode());
+                int replaced = replaceInMethod(entry.classNode, entry.methodNode);
                 if (replaced > 0) {
-                    results.add(new ReplaceResult(entry.classNode(), entry.methodNode(), replaced));
+                    results.add(new ReplaceResult(entry.classNode, entry.methodNode, replaced));
                     totalReplacements += replaced;
                 }
             } catch (Throwable t) {
                 String msg = t.getMessage() != null ? t.getMessage() : t.getClass().getSimpleName();
-                errors.add(entry.classNode().name + "#" + entry.methodNode().name + entry.methodNode().desc + ": " + msg);
+                errors.add(entry.classNode.name + "#" + entry.methodNode.name + entry.methodNode.desc + ": " + msg);
             }
         } while (methodIndex < methods.size() && System.nanoTime() < deadline);
-
         if (methodIndex >= methods.size()) state = State.FINISHED;
     }
 
@@ -68,8 +78,8 @@ public final class PatternReplaceSession {
 
         List<AbstractInsnNode> replacement = parseReplacement(method);
 
-        Set<AbstractInsnNode> matchedSet = Collections.newSetFromMap(new IdentityHashMap<>());
-        Set<AbstractInsnNode> matchHeads = Collections.newSetFromMap(new IdentityHashMap<>());
+        Set<AbstractInsnNode> matchedSet = Collections.newSetFromMap(new IdentityHashMap<AbstractInsnNode, Boolean>());
+        Set<AbstractInsnNode> matchHeads = Collections.newSetFromMap(new IdentityHashMap<AbstractInsnNode, Boolean>());
         for (InstructionPatternMatch match : matches) {
             for (AbstractInsnNode insn : match.getInstructions()) matchedSet.add(insn);
             if (!match.getInstructions().isEmpty()) matchHeads.add(match.getInstructions().get(0));
@@ -78,10 +88,10 @@ public final class PatternReplaceSession {
         InsnList newList = new InsnList();
         for (AbstractInsnNode insn : method.instructions) {
             if (!matchedSet.contains(insn)) {
-                newList.add(insn.clone(new IdentityHashMap<>()));
+                newList.add(insn.clone(new IdentityHashMap<LabelNode, LabelNode>()));
             } else if (matchHeads.contains(insn)) {
                 for (AbstractInsnNode rep : replacement) {
-                    newList.add(rep.clone(new IdentityHashMap<>()));
+                    newList.add(rep.clone(new IdentityHashMap<LabelNode, LabelNode>()));
                 }
             }
         }
@@ -90,13 +100,20 @@ public final class PatternReplaceSession {
     }
 
     private List<AbstractInsnNode> parseReplacement(MethodNode context) {
-        Map<String, LabelNode> existingLabels = new LinkedHashMap<>();
+        final Map<String, LabelNode> existingLabels = new LinkedHashMap<String, LabelNode>();
         for (AbstractInsnNode insn : context.instructions) {
-            if (insn instanceof LabelNode l) existingLabels.put("L" + existingLabels.size(), l);
+            if (insn instanceof LabelNode) {
+                existingLabels.put("L" + existingLabels.size(), (LabelNode) insn);
+            }
         }
         AssemblerClipboardCodec.ParsedInstructions parsed = AssemblerClipboardCodec.parse(
                 replacementText,
-                name -> existingLabels.getOrDefault(name, new LabelNode()));
+                new AssemblerClipboardCodec.LabelResolver() {
+                    public LabelNode resolve(String name) {
+                        LabelNode l = existingLabels.get(name);
+                        return l != null ? l : new LabelNode();
+                    }
+                });
         return parsed.instructions();
     }
 
@@ -106,9 +123,14 @@ public final class PatternReplaceSession {
     public int methodCount() { return methods.size(); }
     public int totalReplacements() { return totalReplacements; }
     public int methodsModified() { return results.size(); }
-    public List<ReplaceResult> results() { return List.copyOf(results); }
-    public List<String> errors() { return List.copyOf(errors); }
+    public List<ReplaceResult> results() { return Collections.unmodifiableList(results); }
+    public List<String> errors() { return Collections.unmodifiableList(errors); }
 
-    private record MethodEntry(ClassNode classNode, MethodNode methodNode) {
+    private static final class MethodEntry {
+        final ClassNode classNode;
+        final MethodNode methodNode;
+        MethodEntry(ClassNode classNode, MethodNode methodNode) {
+            this.classNode = classNode; this.methodNode = methodNode;
+        }
     }
 }
